--- a/pom.xml
+++ b/pom.xml
@@ -36,4 +36,58 @@
             </plugin>
         </plugins>
     </build>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>LICENSE.txt</url>
+        </license>
+    </licenses>
+
+    <profiles>
+        <profile>
+            <id>release-sign-artifacts</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <configuration>
+                            <keyname>572516F4</keyname>
+                        </configuration>
+                        <version>1.0</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+    <scm>
+        <connection>scm:git:git@github.com:lukas-krecan/json-literal.git</connection>
+        <developerConnection>scm:git:git@github.com:lukas-krecan/json-literal.git</developerConnection>
+        <url>scm:git:git@github.com:lukas-krecan/json-literal.git</url>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>lukas</id>
+            <name>Lukas Krecan</name>
+            <email>lukas@krecan.net</email>
+        </developer>
+    </developers>
 </project>
