--- a/json-literal-core/pom.xml
+++ b/json-literal-core/pom.xml
@@ -7,6 +7,6 @@
     <parent>
         <groupId>net.javacrumbs</groupId>
         <artifactId>json-literal</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
 </project>
