--- a/json-literal-test/pom.xml
+++ b/json-literal-test/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>net.javacrumbs</groupId>
         <artifactId>json-literal</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
 
     <dependencies>
