--- a/json-literal-core/pom.xml
+++ b/json-literal-core/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>net.javacrumbs</groupId>
             <artifactId>lambda-param-name-extractor</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
+            <version>0.2.0</version>
         </dependency>
     </dependencies>
 </project>
