--- a/json-literal-test/pom.xml
+++ b/json-literal-test/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.10.0</version>
+        </dependency>
     </dependencies>
 
     <build>
